fix contrast over visited menu item

--- a/less/custom/theme-extras.less
+++ b/less/custom/theme-extras.less
@@ -678,11 +678,11 @@ body{
     
     &.visited
     {
-        background-color:darken(@esdc-disabled, 30%) !important;
+        background-color:@esdc-disabled !important;
         color: @esdc-disabled-text !important;
         &:hover
         {
-            background-color:lighten(@esdc-disabled, 10%) !important;
+            background-color:darken(@esdc-disabled, 30%) !important;
             color: @esdc-disabled-text !important;
         }
     }
